rename old methods, add new methods